<resources>
    <string name="app_name">Redsky Shop</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_to_redsky_shop">Welcome to RedSky Shop</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="user_login">User Login</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="sign_in_using_phone_number">Sign In using Phone Number</string>
    <string name="user_registration">User Registration</string>
    <string name="json_image_description">JSon Image Description</string>
    <string name="ImageDescription">Image_description</string>
    <string name="todo">TODO</string>
    <string name="SendEmail">Use the subject Redsky to contact us regarding a Business Partnership, Complaints or Compliments
        ( ͡° ͜ʖ ͡°) :</string>
    <string name="welcome_to_Redsky_shop">s</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    //string for shopping cart
    <string name="android_pay">Android Pay. Simple way to pay</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="description_example">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="product_size">Size: 40</string>
    <string name="product_color">Color: Black</string>
    <string name="product_price">Price: 80$</string>
    <string name="action_cart">Shopping cart</string>
    <string name="quantity">1</string>
    <string name="product_name">Sleek black top</string>
    <string name="price">100 $</string>
    <string name="remove_from_cart">Remove</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="sub_total">Sub total:</string>
    <string name="server_error">Failed to payment information to server</string>
    <string name="successful_payment">Payment successfully uploaded</string>

    <string name="pay_with_paypal">Pay with PayPal</string>
</resources>
